syntax = "proto3";

package helloWorld;

import "google.api.annotations";

message StringMessage{
    string message = 1;
}

service HelloWorld{
    rpc SayHello(StringMessage) returns (StringMessage){
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
}
